--- a/app/src/main/res/layout/fragment_add_hora_extra.xml
+++ b/app/src/main/res/layout/fragment_add_hora_extra.xml
@@ -67,7 +67,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                tools:text="23/03/2020" />
+                android:inputType="numberDecimal"
+                android:text="0"/>
 
         </LinearLayout>
 
@@ -93,7 +94,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                tools:text="23/03/2020" />
+                android:inputType="numberDecimal"
+                android:text="0"/>
 
         </LinearLayout>
 
