--- a/app/src/main/res/layout/hora_extra_adapter_item.xml
+++ b/app/src/main/res/layout/hora_extra_adapter_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center"
         android:padding="8dp"
         tools:text="22/01/2020" />
 
@@ -24,7 +25,8 @@
         android:id="@+id/hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="60dp"
+        android:gravity="center"
+        android:minWidth="40dp"
         android:padding="8dp"
         tools:text="2" />
 
@@ -39,8 +41,8 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="60dp"
-        android:padding="8dp"
+        android:gravity="center"
+        android:minWidth="50dp"
         tools:text="5€" />
 
     <View
@@ -54,6 +56,7 @@
         android:id="@+id/total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:minWidth="60dp"
         android:padding="8dp"
         tools:text="10€" />
